feat(data-854): it is now possible to import parking from GBFS 2.3 and 3.0 (instead of 2.3)
* refactor a lot of code to use ENTUR's libraries to work with GBFS (GBFS http client, GBFS mapper from V2 to V3, GBFS validator, ...)